[package]
name = "audio_vis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = "0.19"
lofty = "0.19.2"
rodio = {git = "https://github.com/RustAudio/rodio.git"}
rand = "0.8"
splines = "4.3.1"

