[package]
name = "audio_vis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = "0.19"
lofty = "0.19.2"
rustfft = "6.0"
rodio = {git = "https://github.com/RustAudio/rodio.git"}
nannou_audio =  { path = "./nannou_audio" }
minimp3 =  "0.5" 
plotters = "0.3"
wav = "0.1.1"

[[bin]]
path = "src/main.rs"
name = "audio-visualizer"



