[package]
name = "audio_vis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = "0.19"
lofty = "0.19.2"
rustfft = "6.0"
rodio = "0.18.0"
rand = "0.8"
splines = "4.3.1"
minimp3 =  "0.5" 
walkdir = "2.3"
cpal = "0.15.3"
itertools = "0.9.0"
universal-audio-decoder = {path = "./universal-audio-decoder"}
ogg = "0.8.0"
hound = "3.4.0"