[package]
name = "audio-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lofty = "0.19.2"
rustfft = "6.0"
rodio = {git = "https://github.com/RustAudio/rodio.git"}
rand = "0.8"
minimp3 =  "0.5" 
walkdir = "2.3"
